@@ -49,8 +49,6 @@ namespace spoton_common
 						 ** base sixteen.
 						 */
   static const int NAME_MAXIMUM_LENGTH = 64;
-  static const int PASSPHRASE_MAXIMUM_LENGTH = 128;
-  static const int QUESTIONANSWER_MAXIMUM_LENGTH = 512;
   static const qint64 MAXIMUM_NEIGHBOR_BUFFER_SIZE =
     20971520; /*
 	      ** The buffer size
